--- a/style.css
+++ b/style.css
@@ -18,19 +18,26 @@ body{
     font-weight: 900;
 
 }
-h1{
+.half-width h1{
     font-size: 50px;
+    line-height: 0.7;
 }
-span{
+.color-txt{
     color: orangered;
 }
 .flexible-container{
     display: flex;
     margin-bottom: 140px;
+    
 }
 .half-width{
     width: 50%;
     padding-left: 3px;
+    margin-left: 35px;
+}
+.half-width p{
+    text-align: justify;
+    margin-right: 35%;
 }
 .half-width img{
     width: 80%;
@@ -66,6 +73,11 @@ span{
 .recipe-area{
     text-align: center;
 }
+.recipe-area p{
+    margin-right: 27%;
+    margin-left: 27%;
+    text-align: center;
+}
 .flexible-item{
     display: flex;
     margin-left: 40px;
@@ -86,4 +98,41 @@ span{
 .recipie-item h3{
     font-size: bold;
     
+}
+.contact-area{
+    background-color: grey;
+    margin-left: 70px;
+    margin-right: 70px;
+    border-radius: 15px;
+    height: 300px;
+}
+.contact-area h1{
+    text-align: center;
+}
+.contact-area p{
+    text-align: center;
+    
+}
+.update-area{
+    
+    text-align: center;
+    margin: 0 auto;
+    position: relative; left: 40%;
+}
+.footer-area{
+    background-color: black;
+    height: 200px;
+}
+.footer-area h1{
+    text-align: center;
+    position: relative; top: 15%;
+}
+.footer-area p{
+    text-align: center;
+    color: white;
+    position: relative; top:15%;
+    
+}
+#color-second-txt{
+    color: darkgray;
 }
